# where

./: .gitignore  .mise.toml  README.md  profile.example.yaml  pyproject.toml
.github/workflows/: ci.yml
data/: states.golden.json  states.json  states.meta.json
data/manual/: README.md  climate.csv  demographics.csv  lifestyle.csv  lifestyle_sources.csv  rpp.csv  sources.yaml  tax_foundation.csv
etl/: refresh.py  state_names.py  transform.py  validate.py
etl/sources/: bea_col.py  census_demographics.py  manual.py  noaa_climate.py  tax_foundation.py
schema/: profile.schema.json  state.schema.json
tests/: test_data_completeness.py  test_refresh_smoke.py  test_sources_yaml.py  test_transform.py  test_validate.py
tests/contract/: test_schema_compat.py
tests/fixtures/: state_record_invalid_missing.json  state_record_valid.json
tests/sources/: test_climate.py  test_demographics.py  test_manual.py  test_rpp.py  test_tax_foundation.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.test.tsx  App.tsx
web/src/components/: Matrix.test.tsx  Matrix.tsx  ProfileSidebar.test.tsx  ProfileSidebar.tsx  StateDetail.tsx
web/src/data/: fixtures.ts  profile.schema.ts  state.schema.ts  states.test.ts  states.ts
web/src/profile/: defaults.ts  store.test.ts  store.ts  yaml.test.ts  yaml.ts
web/src/scoring/: climate.test.ts  climate.ts  index.ts  lifestyle.test.ts  lifestyle.ts  money.test.ts  money.ts  weighted.test.ts  weighted.ts
