[project]
name = "where-etl"
version = "0.1.0"
description = "ETL for where-to-live tool"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "vcrpy>=6.0",
    "pytest-vcr>=1.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
